tests/ui/coherence/coherence-tuple-conflict.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `(_, _)`
  --> $DIR/coherence-tuple-conflict.rs:15:1
   |
LL | impl<T> MyTrait for (T,T) {
   | ------------------------- first implementation here
...
LL | impl<A,B> MyTrait for (A,B) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(_, _)`

error[E0609]: no field `dummy` on type `&(A, B)`
  --> $DIR/coherence-tuple-conflict.rs:17:35
   |
LL |     fn get(&self) -> usize { self.dummy }
   |                                   ^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0609.
For more information about an error, try `rustc --explain E0119`.
